--- a/i_am_rich/pubspec.yaml
+++ b/i_am_rich/pubspec.yaml
@@ -62,8 +62,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - images/diamond.png
-    - images/i_am_rich_app_icon.png
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
